#4600 [YSQL] Fix centos compilation failure

Summary:
For some reason gcc 5.5 raises unexpected error in the valid statement
```
src/postgres/contrib/yb_pg_metrics/yb_pg_metrics.c:682:3: error: right-hand operand of comma expression has no effect [-Werror=unused-value]
   ++entry->calls;
```

As far as `calls` has `atomic_ullong` type potential bug in gcc could be something like this

https://gcc.gnu.org/bugzilla/show_bug.cgi?id=98029

Fixed by substitution of `++entry->calls;` with `entry->calls += 1;`

Test Plan: Jenkins

Reviewers: alex, mihnea

Reviewed By: mihnea

Subscribers: yql

Differential Revision: https://phabricator.dev.yugabyte.com/D10307